src/test/ui/issues/issue-69306.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-69306.rs:5:23
   |
LL |     const C: S0<u8> = Self(0);
   |                       ^^^^^-^
   |                            |
   |                            expected `T`, found `{integer}`
   |
note: tuple struct defined here
  --> $DIR/issue-69306.rs:3:1
   |
LL | struct S0<T>(T);
   | ^^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL |     const C: S0<u8> = struct S0<T>(T);({T});
   |                       ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-69306.rs:5:23
   |
LL | impl<T> S0<T> {
   |      - this type parameter
LL |     const C: S0<u8> = Self(0);
   |                       ^^^^^^^ expected `u8`, found type parameter `T`
   |
   = note: expected struct `S0<u8>`
              found struct `S0<T>`

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-69306.rs:10:9
   |
LL |         Self(0);
   |         ^^^^^-^
   |              |
   |              expected `T`, found `{integer}`
   |
note: tuple struct defined here
  --> $DIR/issue-69306.rs:3:1
   |
LL | struct S0<T>(T);
   | ^^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL |         struct S0<T>(T);({T});
   |         ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-69306.rs:27:9
   |
LL |         Self(0);
   |         ^^^^^-^
   |              |
   |              expected `T`, found `{integer}`
   |
note: tuple struct defined here
  --> $DIR/issue-69306.rs:3:1
   |
LL | struct S0<T>(T);
   | ^^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL |         struct S0<T>(T);({T});
   |         ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-69306.rs:33:27
   |
LL |     const C: S1<u8, u8> = Self(0, 1);
   |                           ^^^^^-^^^^
   |                                |
   |                                expected `T`, found `{integer}`
   |
note: tuple struct defined here
  --> $DIR/issue-69306.rs:31:1
   |
LL | struct S1<T, U>(T, U);
   | ^^^^^^^^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL |     const C: S1<u8, u8> = struct S1<T, U>(T, U);({T}, 1);
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/issue-69306.rs:33:27
   |
LL | impl<T> S1<T, u8> {
   |      - this type parameter
LL |     const C: S1<u8, u8> = Self(0, 1);
   |                           ^^^^^^^^^^ expected `u8`, found type parameter `T`
   |
   = note: expected struct `S1<u8, _>`
              found struct `S1<T, _>`

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-69306.rs:41:9
   |
LL |         Self(x)
   |         ^^^^^-^
   |              |
   |              expected `T`, found `U`
   |
note: tuple struct defined here
  --> $DIR/issue-69306.rs:38:1
   |
LL | struct S2<T>(T);
   | ^^^^^^^^^^^^^^^^
help: provide an argument of the correct type
   |
LL |         struct S2<T>(T);({T})
   |

error[E0308]: mismatched types
  --> $DIR/issue-69306.rs:41:9
   |
LL | impl<T> S2<T> {
   |      - found type parameter
LL |     fn map<U>(x: U) -> S2<U> {
   |            -           ----- expected `S2<U>` because of return type
   |            |
   |            expected type parameter
LL |         Self(x)
   |         ^^^^^^^ expected type parameter `U`, found type parameter `T`
   |
   = note: expected struct `S2<U>`
              found struct `S2<T>`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0308`.
